tests/errors/array_03_cc.f90
program array_03
implicit none

integer :: a(:)
a(:,:) = 1
a(:,:) = 2
print *, "compilation continued despite errors"

end program
